// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--secondary bpk-button--large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with "disabled" and "href" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with "large" and "secondary" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--secondary bpk-button--large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
    rel="rel-attr"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "destructive" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--destructive"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
  >
    My button
  </a>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "link" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--link"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with a "secondary" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--secondary"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should render correctly with an "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;

exports[`BpkButton should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button--secondary bpk-button--large custom-class-1 custom-class-2"
    type="button"
  >
    My button
  </button>
</DocumentFragment>
`;
